--- a/app/pages/termine/termine.html
+++ b/app/pages/termine/termine.html
@@ -3,11 +3,11 @@
     <button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Page 2</ion-title>
+    <ion-title>{{title}}</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="termine">
   <ion-list>
     <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
       <ion-icon [name]="item.icon" item-left></ion-icon>
@@ -18,6 +18,6 @@
     </button>
   </ion-list>
   <div *ngIf="selectedItem" padding>
-    You navigated here from <b>{{selectedItem.title}}</b>
+    Test <b>{{selectedItem.title}}</b>
   </div>
 </ion-content>
