--- a/app/app.html
+++ b/app/app.html
@@ -7,8 +7,8 @@
   <ion-content>
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        <ion-icon name="{{p.icon}}"></ion-icon>
         {{p.title}} 
+        <ion-icon name="{{p.icon}}" item-right></ion-icon>
       </button>
     </ion-list>
   </ion-content>
