--- a/app/pages/kontakt/kontakt.html
+++ b/app/pages/kontakt/kontakt.html
@@ -17,7 +17,7 @@
 
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
         <h2 class="">
-            Sie haben Fragen?<br />Wir sind für Sie da!
+            Sie haben Fragen?<br />Wir sind fÃ¼r Sie da!
         </h2>
         <p>
             <b><span class="txt-gruen">Prinzengarde der Grossen Gladbacher KG</span></b><br />c/o Franz Peter Esser<br />Gerstenschlag 70<br>51465 Bergisch Gladbach
