--- a/app/pages/termine/termine.html
+++ b/app/pages/termine/termine.html
@@ -8,14 +8,12 @@
             <ion-img src="{{global.slogan}}" width="136" height="40" class="button-icon-right"></ion-img>
         </ion-title>
     </ion-navbar>
-    <!--
-    <ion-toolbar no-border-top dark>
-        <ion-title><ion-img *ngIf="global.logo_startseite" logo width="25" height="25" src="{{global.logo_startseite}}"></ion-img>{{title}}</ion-title>
+    <ion-toolbar primary no-border-top>
+        <ion-title><ion-img width="25" height="30" src="{{global.logo_termine}}"></ion-img>{{title}}</ion-title>
     </ion-toolbar>
-        -->
 </ion-header>
 
-<ion-content class="termine">
+<ion-content padding class="termine">
     <ion-list>
         <ion-item *ngFor="let termin of termine">
             <ion-icon name="calendar" item-left></ion-icon>
