--- a/app/app.html
+++ b/app/app.html
@@ -1,40 +1,51 @@
 <ion-menu [content]="content">
 
   <ion-toolbar>
-    <ion-title>Menu</ion-title>
+    <ion-title>Menü</ion-title>
   </ion-toolbar>
 
   <ion-content>
-    <ion-list>
-<<<<<<< .merge_file_a08416
-      <button menuClose ion-item *ngFor="let p of appPages" (click)="openPage(p)">
-          <ion-icon name="{{p.icon}}" item-left></ion-icon>
-          <ion-img src="{{p.image}}" height="25" item-left></ion-img>
-          {{p.title}}
-      </button>
-=======
-        <button menuClose ion-item *ngFor="let p of appPages" (click)="openPage(p)">
-            <ion-icon name="{{p.icon}}" item-left></ion-icon>
-            <ion-img src="{{p.image}}" height="25" item-left></ion-img>
-            {{p.title}}
-        </button>
-        <div *ngIf="globalVars.isLoggedin">
-            <button menuClose ion-item *ngFor="let p of loggedInPages" (click)="openPage(p)">
-                <ion-icon name="{{p.icon}}" item-left></ion-icon>
-                <ion-img src="{{p.image}}" height="25" item-left></ion-img>
-                {{p.title}}
-            </button>
-        </div>
-        <div *ngIf="globalVars.isLoggedout">
-            <button menuClose ion-item *ngFor="let p of loggedOutPages" (click)="openPage(p)">
-                <ion-icon name="{{p.icon}}" item-left></ion-icon>
-                <ion-img src="{{p.image}}" height="25" item-left></ion-img>
-                {{p.title}}
-            </button>
-        </div>
->>>>>>> .merge_file_a14956
-    </ion-list>
+      <ion-list>
+          <button menuClose ion-item *ngFor="let p of appPages" (click)="openPage(p)">
+              <ion-icon name="{{p.icon}}" item-left></ion-icon>
+              <ion-img src="{{p.image}}" height="25" item-left></ion-img>
+              {{p.title}}
+          </button>
+      </ion-list>
+      <ion-list>
+          <div *ngIf="globalVars.isLoggedin">
+              <ion-list-header>Mitgliederbereich</ion-list-header>
+              <button menuClose ion-item *ngFor="let p of loggedInPages" (click)="openPage(p)">
+                  <ion-icon name="{{p.icon}}" item-left></ion-icon>
+                  <ion-img src="{{p.image}}" height="25" item-left></ion-img>
+                  {{p.title}}
+              </button>
+          </div>
+          <div *ngIf="globalVars.isLoggedout">
+              <button menuClose ion-item *ngFor="let p of loggedOutPages" (click)="openPage(p)">
+                  <ion-icon name="{{p.icon}}" item-left></ion-icon>
+                  <ion-img src="{{p.image}}" height="25" item-left></ion-img>
+                  {{p.title}}
+              </button>
+          </div>
+      </ion-list>
+      <ion-list>
+          <button menuClose ion-item *ngFor="let p of metaPages" (click)="openPage(p)">
+              <ion-icon name="{{p.icon}}" item-left></ion-icon>
+              <ion-img src="{{p.image}}" height="25" item-left></ion-img>
+              {{p.title}}
+          </button>
+      </ion-list>
   </ion-content>
+
+    <ion-footer>
+       
+        <ion-toolbar class="cutiundstier">
+            <div style="text-align:center">Erstellt und betrieben von</div>
+            <a href="https://www.cutiundstier.de" target="_blank" ><img src="images/cutiundstier.png" height="50"></a>
+        </ion-toolbar>
+
+    </ion-footer>
 
 </ion-menu>
 
