--- a/app/pages/impressum/impressum.html
+++ b/app/pages/impressum/impressum.html
@@ -9,16 +9,10 @@
         </ion-title>
     </ion-navbar>
     <ion-toolbar primary no-border-top>
-        <ion-title><ion-img *ngIf="global.logo_termine" width="25" height="30" src="{{global.logo_termine}}"></ion-img>{{title}}</ion-title>
+        <ion-title><ion-img *ngIf="global.logo_impressum" width="25" height="30" src="{{global.logo_impressum}}"></ion-img>{{title}}</ion-title>
     </ion-toolbar>
 </ion-header>
 
-<ion-content padding class="termine">
-    <ion-list>
-        <ion-item *ngFor="let termin of termine">
-            <ion-icon name="calendar" item-left></ion-icon>
-            <h3>{{termin.title}}</h3>
-            <p>{{global.convertISO8601toDate(termin.datetime)}} | {{termin.location_simple}}</p>
-        </ion-item>
-    </ion-list>
+<ion-content padding class="impressum">
+
 </ion-content>
