- Kontaktformular - Impressum - Jubiläums-Inhalte

--- a/app/pages/impressum/impressum.html
+++ b/app/pages/impressum/impressum.html
@@ -14,5 +14,55 @@
 </ion-header>
 
 <ion-content padding class="impressum">
-
+    <ion-row responsive-md>
+        <ion-col width-67>
+            <h2>Angaben gemäß § 5 TMG:</h2>
+            <p>
+                Prinzengarde Bergisch Gladbach<br />
+                Franz Peter Esser<br />
+                Gerstenschlag 44<br />
+                51467 Bergisch Gladbach
+            </p>
+            <p>
+                Telefon: 02202-951464<br />
+                E-Mail: <a href="mailto:info@prinzengarde-gl.de">info@prinzengarde-gl.de</a>
+            </p>
+            <ion-divider></ion-divider>
+            <h2>Haftungsausschluss (Disclaimer)</h2>
+            <h3>Haftung für Inhalte</h3>
+            <p style="padding-right:80px;">
+                Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
+            </p>
+            <h3>Haftung für Links</h3>
+            <p style="padding-right:80px;">
+                Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.
+            </p>
+            <h3>Urheberrecht</h3>
+            <p style="padding-right:80px;">
+                Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
+            </p>
+            <h3>EU-Verordnung Nr. 524/2013</h3>
+            <p style="padding-right:80px;">
+                Auf der Grundlage der EU-Verordnung Nr. 524/2013 hat die EU-Kommission auf europäischer Ebene eine interaktive Website (OS-Plattform) bereit gestellt. Diese dient der Beilegung außergerichtlicher Streitigkeiten aus Online-Rechtsgeschäften. Sie finden diese OS-Plattform der EU-Kommission unter dem Link: http://ec.europa.eu/consumers/odr/
+            </p>
+        </ion-col>
+        <ion-col width-33 padding>
+            <h2>Herausgeber:</h2>
+           
+                    <p>Diese App wurde erstellt und wird betrieben von</p>
+                    <a href="https://www.cutiundstier.de" target="_blank"><img src="images/cutiundstier.png"></a>
+                    <h3>Kontakt Information</h3>
+                    <p>
+                        cuti und stier gbr<br />
+                        Hauptstraße 97<br />
+                        51465 Bergisch Gladbach
+                    </p>
+                    <p>
+                        Rufen Sie uns an: 02202 - 186 777 0
+                    </p>
+                    <p>
+                        E-Mail an uns: <a href="mailto:info@cutiundstier.de" style="color: rgba(11,104,174,1);">info@cutiundstier.de</a>
+                    </p>
+        </ion-col>
+    </ion-row>
 </ion-content>
