--- a/app/pages/jubilaeum/jubilaeum.html
+++ b/app/pages/jubilaeum/jubilaeum.html
@@ -28,6 +28,26 @@
             <ion-icon name="arrow-dropright" item-left></ion-icon>
             Die 60er - Pionierzeit
         </ion-item>
+        <ion-item (click)="openJubilaeumModal70er()">
+            <ion-icon name="arrow-dropright" item-left></ion-icon>
+            Die 70er - Höhen und Tiefen
+        </ion-item>
+        <ion-item (click)="openJubilaeumModal80er()">
+            <ion-icon name="arrow-dropright" item-left></ion-icon>
+            Die 80er - Neue Gesichter und neue Strukturen
+        </ion-item>
+        <ion-item (click)="openJubilaeumModal90er()">
+            <ion-icon name="arrow-dropright" item-left></ion-icon>
+            Die 90er - Eine neue Generation
+        </ion-item>
+        <ion-item (click)="openJubilaeumModal2000()">
+            <ion-icon name="arrow-dropright" item-left></ion-icon>
+            Seit 2000 – Neue Zeit und neue Ideen
+        </ion-item>
+        <ion-item (click)="openJubilaeumModalAusblick()">
+            <ion-icon name="arrow-dropright" item-left></ion-icon>
+            Die nächsten 50 Jahre ? – Ein kurzer Ausblick
+        </ion-item>
     </ion-list>
 </ion-content>
 
