--- a/app/pages/jubilaeum/jubilaeum_modal_1966.html
+++ b/app/pages/jubilaeum/jubilaeum_modal_1966.html
@@ -15,7 +15,7 @@
     <ion-row responsive-md>
         <ion-col width-50>
             <img class="modal-image" src="images/jubilaeum/1966_1.jpg">
-            <div>
+            <div class="modal-content">
                 Ein Dreigestirn ohne standesgemäße Begleitung - das war
                 natürlich kein Zustand! In der Session des Jahres 1966 unter
                 dem legendären Prinzen Willi Nollen fiel dies einigen später
