--- a/app/pages/jubilaeum/jubilaeum_modal_60er.html
+++ b/app/pages/jubilaeum/jubilaeum_modal_60er.html
@@ -15,7 +15,7 @@
     <ion-row responsive-md>
         <ion-col width-50>
             <img class="modal-image" src="images/jubilaeum/60er_1.jpg">
-            <div>
+            <div class="modal-content">
                     Über die ersten zehn Jahre der Prinzengarde existiert ein Archiv
                     in vier Bänden mit zahlreichen Bildern und Texten. Über
                     Sinn und Bestimmung der Garde heißt es hier:<br />
