--- a/app/pages/jubilaeum/jubilaeum_modal_vorgeschichte.html
+++ b/app/pages/jubilaeum/jubilaeum_modal_vorgeschichte.html
@@ -15,7 +15,7 @@
     <ion-row responsive-md>
         <ion-col width-50>
             <img class="modal-image" src="images/jubilaeum/vorgeschichte_1.jpg">
-            <div>
+            <div class="modal-content">
                 Wie selten etwas einfach so vom Himmel fällt, so hat auch die
                 Gründung unserer Prinzengarde eine Vorgeschichte. Bereits
                 seit 1952 hatte es in Bergisch Gladbach die „Gläbbiger Stadtsoldaten“
