--- a/www/index.html
+++ b/www/index.html
@@ -24,5 +24,7 @@
   <script src="build/js/zone.js"></script>
   <!-- the bundle which is built from the app's source code -->
   <script src="build/js/app.bundle.js"></script>
+  <!-- include external ja libraries -->
+  <script src="build/js/external-libraries.js"></script>
 </body>
 </html>
